# pkgutils

./: .editorconfig  .gitignore  COPYRIGHT  HACKING.md  Makefile  Makefile.lint  README  README.md  TODO  TODO.md  bash_completion  config.mk  flags-sanitizer.mk  main.cc  main.cpp  meson.build  meson.options  pathnames.h  pkg_footprint.patch  pkgadd.8  pkgadd.8.pod  pkgadd.cc  pkgadd.conf.5  pkgadd.conf.5.pod  pkgadd.conf.example  pkgadd.cpp  pkgadd.h  pkginfo.1  pkginfo.1.pod  pkginfo.8.pod  pkginfo.cc  pkginfo.cpp  pkginfo.h  pkgrm.8  pkgrm.8.pod  pkgrm.cc  pkgrm.cpp  pkgrm.h  pkgutil.cc  pkgutil.h  (+1 more)
.github/workflows/: actions.yml  build.yml  c-cpp.yml  lint.yml.disabled  make.yml
completion/: Makefile  bash_completion  meson.build  pkgadd.bash_completion  pkgchk.bash_completion  pkginfo.bash_completion  pkgrm.bash
completions/: Makefile  bash_completion
extra/: asan_ubsan.mk  extra_warns.mk  flags-extra.mk  optional_installed_arg.patch  pkgadd.conf.sample
extra/bashcomp/: Makefile
extra/vimfiles/: Makefile
internal/: meson.build
man/: .gitignore  Makefile  meson.build  packages.7.scdoc  pkgadd.8  pkgadd.8.scd  pkgadd.8.scdoc  pkgadd.conf.5  pkgadd.conf.5.scdoc  pkgchk.1.scdoc  pkginfo.1  pkginfo.1.scdoc  pkginfo.8.scd  pkgrm.8  pkgrm.8.scd  pkgrm.8.scdoc
pod/: pkgrm.8.pod
src/: .editorconfig  .gitignore  Makefile  deferred_signals.cpp  deferred_signals.h  main.cpp  meson.build  pathnames.h  pkgadd.cpp  pkgadd.h  pkgchk.cpp  pkginfo.cpp  pkginfo.h  pkgrm.cpp  pkgrm.h  pkgutil.cpp  pkgutil.h
src/libpkgutils/: .gitignore  Makefile  config.mk  db_lock.cpp  db_lock.h  fs_utils.cpp  fs_utils.h  libpkgutils.h  pkg_utils.cpp  pkg_utils.h  pkgutil.cpp  pkgutil.h
tests/: deferred_signals_test.cpp  meson.build
vim/: Makefile  meson.build  syntax.vim
vim/ftdetect/: pkgaddconf.vim
vim/syntax/: pkgaddconf.vim
