option('link_mode',
  type: 'combo',
  choices: ['shared', 'static'],
  value: 'shared',
  description: 'How pkgutils links against libpkgcore/libpkgaudit')

option('build_man',
  type: 'boolean',
  value: true,
  description: 'Build and install manual pages')

option('prefer_static_deps',
  type: 'boolean',
  value: false,
  description: 'Prefer static variants of external dependencies when available')
