option('link_mode',
  type: 'combo',
  choices: ['shared', 'static'],
  value: 'shared',
  description: 'How pkgutils links against libpkgcore/libpkgaudit')

option('manpages',
  type: 'boolean',
  value: true,
  description: 'Build and install manual pages')

option('bashcomp',
  type: 'boolean',
  value: false,
  description: 'Install bash completion')

option('bashcompdir',
  type: 'string',
  value: '',
  description: 'Install directory for bash completion files')

option('vimfiles',
  type: 'boolean',
  value: false,
  description: 'Install Vim files')

option('vimfilesdir',
  type: 'string',
  value: '',
  description: 'Install directory for Vim files')
