bashcompdir = get_option('datadir') / 'bash-completion' / 'completions'

install_data('pkgadd.bash_completion',  install_dir: bashcompdir, rename: 'pkgadd')
install_data('pkgrm.bash_completion',   install_dir: bashcompdir, rename: 'pkgrm')
install_data('pkgchk.bash_completion',  install_dir: bashcompdir, rename: 'pkgchk')
install_data('pkginfo.bash_completion', install_dir: bashcompdir, rename: 'pkginfo')
