bashcompdir = get_option('datadir') / 'bash-completion' / 'completions'

install_data('pkgadd.bash',  install_dir: bashcompdir, rename: 'pkgadd')
install_data('pkgrm.bash',   install_dir: bashcompdir, rename: 'pkgrm')
install_data('pkgchk.bash',  install_dir: bashcompdir, rename: 'pkgchk')
install_data('pkginfo.bash', install_dir: bashcompdir, rename: 'pkginfo')
